// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example-1.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
{% include_relative _installations/tarball.md %}

{% cloudinary nice_prefix_-_for_the_filename.jpg %}

# Userscripts <span>[{% img github.svg alt:"View on GitHub" title:"View on GitHub" %}](https://github.com/Charcoal-SE/Userscripts) [Build <span>status loading…</span>](//travis-ci.org/Charcoal-SE/userscripts){: .build}</span>

{% css userscripts %}
{% js userscripts %}

{{ foo
multiline
where does it end }}

=====================================output=====================================




# Userscripts <span>[](https://github.com/Charcoal-SE/Userscripts) [Build <span>status loading…</span>](//travis-ci.org/Charcoal-SE/userscripts){: .build}</span>







================================================================================
`;

exports[`example-1.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{% include_relative _installations/tarball.md %}

{% cloudinary nice_prefix_-_for_the_filename.jpg %}

# Userscripts <span>[{% img github.svg alt:"View on GitHub" title:"View on GitHub" %}](https://github.com/Charcoal-SE/Userscripts) [Build <span>status loading…</span>](//travis-ci.org/Charcoal-SE/userscripts){: .build}</span>

{% css userscripts %}
{% js userscripts %}

{{ foo
multiline
where does it end }}

=====================================output=====================================




# Userscripts <span>[](https://github.com/Charcoal-SE/Userscripts) [Build <span>status loading…</span>](//travis-ci.org/Charcoal-SE/userscripts){: .build}</span>







================================================================================
`;

exports[`unbalanced-object-close-only.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================


Following brace doesn't   open  so these words    should not be   considered as *liquid node* }}

=====================================output=====================================
Following brace doesn't open so these words should not be considered as _liquid
node_ }}

================================================================================
`;

exports[`unbalanced-object-close-only.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


Following brace doesn't   open  so these words    should not be   considered as *liquid node* }}

=====================================output=====================================
Following brace doesn't open so these words should not be considered as _liquid node_ }}

================================================================================
`;

exports[`unbalanced-template-close-only.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================


Following brace doesn't   open  so these words    should not be   considered as *liquid node* %}

=====================================output=====================================
Following brace doesn't open so these words should not be considered as _liquid
node_ %}

================================================================================
`;

exports[`unbalanced-template-close-only.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


Following brace doesn't   open  so these words    should not be   considered as *liquid node* %}

=====================================output=====================================
Following brace doesn't open so these words should not be considered as _liquid node_ %}

================================================================================
`;
